testcases/bindgen/129/error_message.txt
error[E0392]: parameter `T` is never used
  --> js.rs:20:27
   |
20 |         pub struct Rooted<T> {
   |                           ^ unused type parameter
   |
   = help: consider removing `T` or using a marker such as `std::marker::PhantomData`

error: aborting due to previous error